# project-chimera

./: .coderabbit.yaml  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  final_task_2_3_check.py  main.py  pyproject.toml  requirements.txt  run_all_tests.sh
.github/: copilot-instructions.md
.github/workflows/: main.yml
agents/: SOUL.md
agents/commerce/: wallet_manager.py
agents/judge/: __init__.py  evaluator.py
agents/planner/: __init__.py  task_decomposer.py
agents/worker/: __init__.py  executor.py
mcp_servers/development/: filesystem_server.py  git_server.py
models/: database.py
research/: architecture_strategy.md  research_summary.md  tooling_strategy.md
scripts/: launch_mcp_servers.py  test_wallet_real.py
skills/: README.md  __init__.py  registry.py  wallet_management.py
skills/commerce/: SKILL.md  __init__.py  skill_commerce.py
skills/commerce_engine/: manifest.json
skills/content/: SKILL.md  __init__.py  generator.py
skills/engagement/: SKILL.md  __init__.py  replier.py
skills/trends/: SKILL.md  __init__.py
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md  test.md
tests/: test_skills_interface.py  test_trend_fetcher.py
tests/error_recovery/: test_transient_errors.py  test_worker_retry.py
tests/hitl/: test_hitl_validation.py
tests/integration/: test_full_flow.py
tests/performance/: test_judge_performance.py  test_planner_performance.py  test_worker_performance.py
tests/unit/: test_commerce.py  test_judge.py  test_planner.py  test_worker.py
