[project]
name = "project-chimera"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]           
testpaths = ["tests"]       
asyncio_mode = "strict"      
addopts = "-v --tb=short"    
