[project]
name = "project-chimera"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.3",
    "coinbase-agentkit>=0.7.4",
    "httpx>=0.28.1",
    "requests>=2.32.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]           
testpaths = ["tests"]       
asyncio_mode = "strict"      
addopts = "-v --tb=short"    
